--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -1,10 +1,24 @@
-name: Acquire activation file
+name: Acquire activation files
 on:
   workflow_dispatch: {}
 jobs:
-  activation:
+  activation-unix:
     name: Request manual activation file 🔑
     runs-on: ubuntu-latest
+    steps:
+      # Request manual activation file
+      - name: Request manual activation file
+        id: getManualLicenseFile
+        uses: game-ci/unity-request-activation-file@v2
+      # Upload artifact (Unity_v20XX.X.XXXX.alf)
+      - name: Expose as artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ steps.getManualLicenseFile.outputs.filePath }}
+          path: ${{ steps.getManualLicenseFile.outputs.filePath }}
+  activation-win:
+    name: Request manual activation file 🔑
+    runs-on: windows-latest
     steps:
       # Request manual activation file
       - name: Request manual activation file
